@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
+DIST django-crispy-forms-1.4.0.tar.gz 47444 SHA256 d0c9531ebdff8dc255f625e677ec2fab326522e3f4cd8f7a3e891d773d281510 SHA512 e06ec72a2fc44aa0f57fd507230289f78caebdb02d4af9adafd4b09a29b1df1be5301f3883c8b9007ecd0722683395451bbc382060eca5a459ddf6ef9edc2e1b WHIRLPOOL 05813292a863c69b3b0296ea7a7912bb8ca0f673fc07eaeff5053def516dc2b836725c7559e98cd8aa7ad59d4d686b2ff04bc53b027ea53413ea2329fa04e42d
+EBUILD django-crispy-forms-1.4.0.ebuild 874 SHA256 4b76132a16817332b827908b0235c4279c781246a42c63820ea7f8cdd316684f SHA512 642b6553f447f3cd6f6ef3964826a35b9bec574fb6eb12dd9d3ab40e903d3208bc8cc62b7d8add954cb6e883589d7390d99d4929f5809468af140fad83803a2f WHIRLPOOL 44696df3d7764c4f25a24e50d7ab89ebf562d71e10c25d7bc7b3ad44960ffa42544f5fd54c9926319877069306384fc94134a845755209ccbdf2f172f62f541c
+MISC ChangeLog 400 SHA256 4707f6d347b79f64daef5ce784f6beccad87bfed3040742a6cd24a6c93ec4f93 SHA512 982ec738eda7fc4417553980e9d78e9ffec1bbc624bf862bc35964051e8df39d52bf44c19f35ddee4088566c05240b889f0b755114ec55ce92324c0a1e2f65b3 WHIRLPOOL fa15066ab9599a053e828f6c8dff0a55d75551b5813d9a190a271826c70b3334ff52a7862b79562c6739e76893f4fa1924f43392a8265a8e75ebfd084fbac4b1
+MISC metadata.xml 258 SHA256 f9120561eb5a0eb0be48e47772750941e1a206da5fda56321b45eb76fd145ba7 SHA512 adbf77e7b9f35851720e2f9ef564420d0d128c19fd2a72cd4c9f25e0261419d46c1f72c45fc7093a00eb15e551a14742f969157fb3356f8a60b3d31dee38c8c2 WHIRLPOOL 7811fe6099018241061d288dcc1333c7bad35703bb201f921041c7faeeacb03faf748f1d34699afe4e21b1a3f95149fafbbb18633548dfd344fbb736a3ddf495
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJVJT2kXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirqZ0P/1037NeS3Tg/W8UsFMx/3IUj
+WpO+PoEBZ0nuKDgfIMVSw1U03mJAvwjyzMREAa6/cTxReFHCfvIxCqMA5VifMn8o
+5+/AE6m9uvXfiDohoyO199zkiUCn2qDro7KYKWgiCbITtAMav/40Z0gCmMYj1deT
+jLqhgrW5jQUoj+TsWWmXdaJ1wkb4JHS097rEylnoRL+4771gX4ColLwR2iq44nD7
+nam0NNMAu1gLVFZIJpDPy8A0S7+eCsDOcQ1RBwGwJxDA3r9hUyuXd3jhpV0za1vA
+LeU9lDJe5d1iLU46LkJ0CwsIZQozHtPBkaAnoIDXlVBp+cAd6RRFR8b3eTa6MIoU
+0Xi5Fz/WIMjUy5f6UH5L5GUwyXgNJTF1hSPAg7rauGpFxnHL+TEcu/Gg2w0sH+kP
+fBShFkmk9nzmpz9JVeLczGskZWRlrvJG8TsXrqTz0eaxYQmS83d62ZRxGnO70tEi
+HhzKc9wsNO+NBQTv3NFTyt2ATNKYzyFnThNqHkYH8PO7StEINz0bJeRut4HR38zn
+JoWgWe+us26cx3dfiTfrJOFo08WcFAAZerWtCeBlKEaevBTKZFMV874tA0jxj3jU
+wIzZPDGvP92o1FtwdyvFXC/F9H8O33DumpyFE9k+B1pp8oNnuRyvwcYeOfwvdGiD
+AWAsdI3xQo3P1jpnd53k
+=DK03
+-----END PGP SIGNATURE-----
