@@ -1,7 +1,7 @@
 AUX nestra-0.66-exec-stack.patch 235 SHA256 66d0d08ff4c311dedbbe3ffce3dd07f911e269e1d667b705ac41bfb0e9e6eb52 SHA512 a281f6c79de782982425f65cc4c54f35530d394caee4b0c58c9ef3f0f11b38d6ab6c31ecd6e708effb31ca530f1c9fb7ec60cf23d58f4a750dfc86a6c6e43b67 WHIRLPOOL 214523a8fbc089bd9c867e6fa854e237a5a400230d9020495da0a3995cf09b9e270bbfb9415ea9c3ce65dab1dea3402a0d8193cc81b855c261e9a4bef0849e6b
 AUX nestra-0.66-include.patch 1269 SHA256 62df64671ac9273228c8142326f4936bf89dc7223c246f8ef8d6c5ab52ab475f SHA512 d2b53ca1b61c71ff6ad98aee15c2f5cfeb02eaa8b7544e9a0d23babe021ee53aede5ad935b0529c1d6d294424c7ca1a5ea6e390af6c4f40aac4da9b43b87b601 WHIRLPOOL 4ecbe386c69d7bab80a92b923cbecc03b802598c3f90b497dc586f7a6994987fa981fc12e16b04918faf8bcda7b4b29b094b8dcf8a9dd4171bb0d2a2023dfe23
-DIST nestra-0.66.tar.gz 49757 SHA256 6be7743cef85cf3de2da4e7489bfd2329f7f21aa01be9f58801f6dbd9f8e96d6
-DIST nestra_0.66-10.diff.gz 2414 SHA256 5933509a4641afee22275b4c07e8e0f0d136056a7e0e3a4609a1e6c9674e32ea
-EBUILD nestra-0.66-r2.ebuild 1296 SHA256 50ae478f62521cf392c2bd2e6bf6e460d8f12c89cc2ce493367dd4f8361aa46d SHA512 16a146790cd91712222212438bfcc7a9ca2335411e231025b8e1c243652419e0de54d7ee28db03fbde8172dc5b7abda7b6eea7386ed389d79260e7610092cb0d WHIRLPOOL 3b6dcd043e9ef629642cc14243423b59113814c9add2a69d810197c61a0aecf2ef404604b65a0440e5c33f35d0f6c6b6ff862448adc088c5314042a59ff8aa82
-MISC ChangeLog 2378 SHA256 f4d6d48dd3a9b47f79541bb1666a496490fd7124d14c53042d4109312b269ae0 SHA512 39e0d05943d1b71e6f52dfec8f8cede7cb10da09c9f59bbaf5325288148e8ff76cd75c864c01e945d81042dc613186712c0f24b31c1942d8f61a8b1ef7fd3945 WHIRLPOOL 4690bf1d4b53d6fdeb0ebd01a0a430d224fcd6c786cc73c15a7afb363b16c5b0b0d815b426314310fbf9fa2d37d08cb7f8907daec109c1ec4c2d551d2ccaf620
+DIST nestra-0.66.tar.gz 49757 SHA256 6be7743cef85cf3de2da4e7489bfd2329f7f21aa01be9f58801f6dbd9f8e96d6 SHA512 25f9d0c0359b46ddcd451552e7737b0f955a18e7a4ebd30d5494b12f787b9c45a49579207328c06c10efc7f8283bc688eb2061c538523ed257825b2394d978ce WHIRLPOOL 919e030b82e995ad95599c20eb2efed087af5a89a60f76b565122ef6c0d8441026d1b44de7469ed18887980f4da8c6a5c8476157f2cea52085628bcdd686cd46
+DIST nestra_0.66-10.diff.gz 2414 SHA256 5933509a4641afee22275b4c07e8e0f0d136056a7e0e3a4609a1e6c9674e32ea SHA512 4ea1ad97f6c2eca0434dee4031e0486cc1c7c25237a467d4bf33bd0656b52441143855e07b29e1bdcf95514e19fe68ecb8f73d0972d17d9e3b6fd7a92d2db8c6 WHIRLPOOL f4ccdfededfd118a7cd84f49f3a45ffbd460a33f577bf10c7affddd716e4783820ddd95e7664a184a860323dee436c1b45ed889c63ddf7c31a46489b2613b709
+EBUILD nestra-0.66-r2.ebuild 1205 SHA256 9ba80e1360841f58909c6c81438bb5a0648dd7a2186f85330e4905f2bdb0d565 SHA512 b771ebb168f2c42e848542d445e43bdeb2f25b226df150ca77ec188a921f2f5420924b4a95d4746ac6722b0da21ef5f83a340ebc85ce7b6712ecfbcfddfd322b WHIRLPOOL 5d89063c2a7465250038520ff77ab5689323171e7dbcde1742456d5c5d78ba500676c3c0a71ebe4176bcf264f3c20ab6dc2b6d57a83a9a7c9004b59dcdc07412
+MISC ChangeLog 2557 SHA256 7ec9c9b4b44416d18eeb1a0f8c77a223d39c6a3baf3f379f553e2845b7ab4cbb SHA512 6d10cf48dba987506386cd649e8820fa8019d0fa92b6390a64605cb1d617251cc40466eb4ecc8aa2226880d5941981b9fabf8802e10cc1f66e0724a17d0ee871 WHIRLPOOL 4411f71fd47b9e2132f3fd9936f0b235a080348c0a1a56eeefc905ffab4c9b8ff1c609eac5c43a830e550ed40ad563abb002d1009c46b920e1ae23b812869a0c
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
