@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
-DEPEND=|| ( ( x11-libs/libX11[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] ) )
+DEPEND=x11-libs/libX11[abi_x86_32(-)]
 DESCRIPTION=NES emulation for Linux/x86
 EAPI=5
 HOMEPAGE=http://nestra.linuxgames.com/
-KEYWORDS=~amd64 x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-2
-RDEPEND=|| ( ( x11-libs/libX11[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] ) ) games-misc/games-envd
+RDEPEND=x11-libs/libX11[abi_x86_32(-)] games-misc/games-envd
 SLOT=0
 SRC_URI=http://nestra.linuxgames.com/nestra-0.66.tar.gz mirror://debian/pool/contrib/n/nestra/nestra_0.66-10.diff.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=59cefbd26cd02691ea0523266a24b5c7
+_md5_=1ee0884c83261703fd2ad7fe70d6d8fc
